fixed the align

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
   }
 
   .count{
-    padding-left: 12px;
+    text-align: center;
   }
 
 .up {
